# django-content-access-control

./: pyproject.toml
content_access_control/: admin_permission.py  apps.py  models.py
content_access_control/migrations/: 0001_initial.py
test_project/test_project/: settings.py
