[project]
name = "django-content-access-control"
version = "0.4.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "casbin>=1.43.0",
    "django>=4.2",
 "pycasbin>=2.2.0",
]

[tool.setuptools.packages.find]
exclude = ["model_examples*"]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
